# collision

./: .gitignore  CMakeLists.txt  main  main.cpp  make.sh  polygon.h  rectangle.h  util.h  vertex.h
scripts/: testbasic.py  testpolygon.py
