cmake_minimum_required(VERSION 3.15)

project(collision)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O3 -g")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
aux_source_directory(Dense/ DIR_SRCS)
aux_source_directory(. DIR_SRCS)
add_subdirectory(pybind11)
pybind11_add_module(collision ${DIR_SRCS})